cert-manager1/test-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - thuyenthunghoian.com
      secretName: letsencrypt-secret-dvnguyen
  rules:
    - host: thuyenthunghoian.com
      http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: http-test-svc
                port:
                  number: 80
